objects/LLC_BI__Reconciliation_Service__c.object
<CustomObject>
    <description>This object stores records that allow financial institutions to ensure the timeliness of deposits matches what is stored in the treasury service.</description>
    <fields>
        <fullName>LLC_BI__Account_Recon_Plan_Type__c</fullName>
        <label>Account Recon Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
                <value>
                    <fullName>Deposit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Other_Reconciliation_Cycle_Explanation__c</fullName>
        <description>Please explain why you choose other for Reconciliation Type.</description>
        <inlineHelpText>Please explain why you choose other for Reconciliation Type.</inlineHelpText>
        <label>Other Reconciliation Cycle Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Reference</label>
        <referenceTo>LLC_BI__Product__c</referenceTo>
        <relationshipLabel>Reconciliation Service</relationshipLabel>
        <relationshipName>Reconciliation_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Reconciliation_Type__c</fullName>
        <label>Reconciliation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reconciliation Service</relationshipLabel>
        <relationshipName>Reconciliation_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Treasury_Service_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Treasury Service Reference</label>
        <referenceTo>LLC_BI__Treasury_Service__c</referenceTo>
        <relationshipLabel>Reconciliation Service</relationshipLabel>
        <relationshipName>Reconciliation_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Reconciliation Service</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RS-{000000000}</displayFormat>
        <label>Reconciliation Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reconciliation Service</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>